--- a/david/index2.html
+++ b/david/index2.html
@@ -7,6 +7,15 @@
     <title>Document</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">
+                    Voltar
+                </a>
+            </li>
+        </ul>
+    </nav>
     <h1>Sobre Nós</h1>
     <h3>Em 2020 quando se depararam com a uma quantidade considerável de gatos com dificuldades físicas quanto a locomoção, Nicholas Souza e Matheus Souza iniciaram seu projeto para desenvolver seu primeiro protótipo de cadeira de rodas para gatos</h3>
     <center>
