--- a/david/index.html
+++ b/david/index.html
@@ -37,11 +37,7 @@
 
                 </li>
 
-                <li>
-                    <a href="index3.html" id="cadastro">
-                        Cadastro
-                    </a>
-                </li>
+
             </div>
         </ul>
 
@@ -59,7 +55,7 @@
             </div>
 
             <div>
-                <h2>
+                <h2 id="intro">
                     Cadeira de rodas para que seu pet tenha uma vida com mais mobilidade!
                 </h2>
                 <p>
@@ -81,7 +77,7 @@
                     <img src="miaugrr.jpeg" alt="MiauWheels purple " width="465px" height="auto">
                 </center>
             </div2>
-            <h3>
+            <h3 id="price">
                 Cadeira Personalizada<br>
                 Preço: 3000000﷼
             </h3>
