--- a/david/index4.html
+++ b/david/index4.html
@@ -11,7 +11,7 @@
     <nav id="navbar">
         <ul>
 
-            <div class="navbar1">
+            <div href="index.html" id="navbar1">
                 <img src="logo.jpg" alt="logo MiauWheels ">
                 </li>
 
