--- a/david/index.html
+++ b/david/index.html
@@ -14,7 +14,7 @@
     <nav id="navbar">
         <ul>
 
-            <div class="navbar1">
+            <div href="index.html" id="navbar1">
                 <img src="logo.jpg" alt="logo MiauWheels ">
                 </li>
 
@@ -29,7 +29,7 @@
                 </li>
 
                 <li>
-                    <a href="index3.html" id="ajude">
+                    <a href="index4.html" id="ajude">
                         Ajude-nos
 
                     </a>
@@ -77,11 +77,7 @@
                     <img src="miaugrr.jpeg" alt="MiauWheels purple " width="465px" height="auto">
                 </center>
             </div2>
-            <h3 id="price">
-                Cadeira Personalizada<br>
-                Preço: 3000000﷼
-            </h3>
-        </div>
+          
 
     </section>
 
