--- a/david/index3.html
+++ b/david/index3.html
@@ -7,6 +7,7 @@
     <body>
         <div>
             <img src="carlao.png" alt="MiauWheels purple " width="925px" height="auto">
+            <img src="unnamed.jpeg" alt="MiauWheels purple " width="600px" height="auto">
         </div>
     </body>
 </html>
